applications/overlays/hcloud/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-query-ingress
  namespace: observability
  annotations:
    "external-dns.alpha.kubernetes.io/hostname": "jaeger-query.macro.network"
    "external-dns.alpha.kubernetes.io/cloudflare-proxied": "true"
    "traefik.ingress.kubernetes.io/router.entrypoints": "websecure"
spec:
  tls:
    - hosts:
        - jaeger-query.macro.network
  rules:
    - host: jaeger-query.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 16686
